// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Var checkGrammar=false 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var checkGrammar=true 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var checkHighlight=false 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var checkHighlight=true 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var checkSpaces=false 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var checkSpaces=true 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var className="my-classname" 1`] = `
<var
  className="uu5-bricks-var my-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var content="This is Content from ContentMixin" 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</var>
`;

exports[`UU5.Bricks.Var content=12345 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
>
  12345
</var>
`;

exports[`UU5.Bricks.Var controlled=false 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var controlled=true 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var default props 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var disabled=false 1`] = `
<var
  className="uu5-bricks-var"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var disabled=true 1`] = `
<var
  className="uu5-bricks-var"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var docKit examples UU5.Bricks.Var should render without crash 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID01"
>
  <Var
    id="uuID02"
    nestingLevel="page"
  >
    redPill
  </Var>
  <UU5.Common.TextCorrectorContextConsumer
    key="1"
    text=" is in this case variable."
  />
</p>
`;

exports[`UU5.Bricks.Var dynamic=false 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var dynamic=true 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var hidden=false 1`] = `
<var
  className="uu5-bricks-var"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var hidden=true 1`] = `
<var
  className="uu5-bricks-var"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var id="myId" 1`] = `
<var
  className="uu5-bricks-var"
  id="myId"
/>
`;

exports[`UU5.Bricks.Var ignoreHTML=false 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var ignoreHTML=true 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var mainAttrs=undefined 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var name="myName" 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var noIndex=false 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var noIndex=true 1`] = `
<var
  className="uu5-bricks-var uu5-noindex"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var selected=false 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var selected=true 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var style="padding:8px; borderRadius: 2px" 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.Var style={"backgroundColor":"red","color":"blue"} 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Var textCorrector=false 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var textCorrector=true 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Var tooltip="My Tooltip" 1`] = `
<var
  className="uu5-bricks-var"
  id="uuID"
/>
`;
